--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~11.2.4",
     "@angular/service-worker": "~11.2.4",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "bootstrap": "^5.0.2",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
